--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "jotai": "^2.5.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-switch": "^7.0.0",
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.40.0",
@@ -24,6 +27,7 @@
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "file-loader": "^6.2.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.0"
   }
